# python-beauhurst-data-v2

./: pyproject.toml
beauhurst_data/: __init__.py  api_call.py  generate_csv.py  main.py
beauhurst_data/utils/: api_access.py  json_processor.py
